// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen folders config import-export] should create the folders: the folders have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ folder => type: 'person', owner: 'tenant/Environment', path: 'Persons/cfgObjectTest'
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen folders config import-export] should update the folders: the folders have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ folder => type: 'person', owner: 'tenant/Environment', path: 'Persons/cfgObjectTest'
Completed. 1 object(s) imported.
",
}
`;
